fixed downloads not showing. corrected nav fonts.

--- a/themes/hugo-litecoin-theme/static/css/style.css
+++ b/themes/hugo-litecoin-theme/static/css/style.css
@@ -203,7 +203,7 @@ fieldset[disabled] .btn-xl.active {
   .navbar-default .nav li a {
     text-transform: uppercase;
     font-family: "Roboto",Helvetica,Arial,sans-serif;
-    font-weight: 400;
+    font-weight: bold;
     letter-spacing: 1px;
     color: #888; }
   .navbar-default .nav li a:hover,
@@ -670,16 +670,15 @@ header .intro-text {
 
 header .intro-text .intro-lead-in {
   margin-bottom: 25px;
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 22px;
+  font-weight: normal;
   line-height: 22px; }
 
 header .intro-text .intro-heading {
   margin-bottom: 25px;
   text-transform: uppercase;
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-size: 50px;
   font-weight: lighter;
+  font-size: 50px;
   line-height: 50px; }
 
 @media (min-width: 768px) {
@@ -688,16 +687,12 @@ header .intro-text .intro-heading {
     padding-bottom: 200px; }
   header .intro-text .intro-lead-in {
     margin-bottom: 25px;
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 40px;
-    font-weight: 200;
     line-height: 40px; }
   header .intro-text .intro-heading {
     margin-bottom: 50px;
     text-transform: uppercase;
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 60px;
-    font-weight: lighter;
     line-height: 75px; } }
 
 footer {
@@ -707,12 +702,10 @@ footer {
 footer span.copyright {
   text-transform: uppercase;
   text-transform: none;
-  font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
   line-height: 40px; }
 
 footer ul.quicklinks {
   margin-bottom: 0;
   text-transform: uppercase;
   text-transform: none;
-  font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
   line-height: 40px; }
