--- a/themes/hugo-litecoin-theme/static/sass/_footer.scss
+++ b/themes/hugo-litecoin-theme/static/sass/_footer.scss
@@ -7,7 +7,7 @@ footer {
 footer span.copyright {
   text-transform: uppercase;
   text-transform: none;
-  font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  
   line-height: 40px;
 }
 
@@ -15,6 +15,6 @@ footer ul.quicklinks {
   margin-bottom: 0;
   text-transform: uppercase;
   text-transform: none;
-  font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+
   line-height: 40px;
 }
