--- a/themes/hugo-litecoin-theme/static/sass/_header.scss
+++ b/themes/hugo-litecoin-theme/static/sass/_header.scss
@@ -18,8 +18,9 @@ header .intro-text {
 
 header .intro-text .intro-lead-in {
   margin-bottom: 25px;
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+
   font-size: 22px;
+  font-weight:normal;
 
   line-height: 22px;
 }
@@ -27,9 +28,9 @@ header .intro-text .intro-lead-in {
 header .intro-text .intro-heading {
   margin-bottom: 25px;
   text-transform: uppercase;
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+font-weight:lighter;
   font-size: 50px;
-  font-weight: lighter;
+
   line-height: 50px;
 }
 
@@ -41,19 +42,17 @@ header .intro-text .intro-heading {
 
   header .intro-text .intro-lead-in {
       margin-bottom: 25px;
-      font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+
       font-size: 40px;
 
-      font-weight: 200;
       line-height: 40px;
   }
 
   header .intro-text .intro-heading {
       margin-bottom: 50px;
       text-transform: uppercase;
-      font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+
       font-size: 60px;
-      font-weight: lighter;
       line-height: 75px;
   }
 }
