--- a/themes/hugo-litecoin-theme/static/sass/_nav.scss
+++ b/themes/hugo-litecoin-theme/static/sass/_nav.scss
@@ -6,6 +6,7 @@
 
 
 
+
   .navbar-brand {
     font-family: "Roboto",Helvetica,Arial;
     font-weight: lighter;
@@ -60,7 +61,7 @@
   .nav li a {
     text-transform: uppercase;
     font-family: "Roboto",Helvetica,Arial,sans-serif;
-    font-weight: 400;
+    font-weight: bold;
     letter-spacing: 1px;
     color: $f-nav;
   }
